Refactor all portfolio

--- a/src/assets/icons/SpringIcon.astro
+++ b/src/assets/icons/SpringIcon.astro
@@ -1,5 +1,5 @@
 ---
-const { color = 'currentColor', size = 24 } = Astro.props;
+const { color = 'currentColor', size = 24 } = Astro.props
 ---
 
 <svg fill={color} width={size} height={size} viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
