--- a/src/assets/icons/WebIcon.astro
+++ b/src/assets/icons/WebIcon.astro
@@ -1,6 +1,7 @@
 ---
-const { color = 'currentColor', size = 24 } = Astro.props;
+const { color = 'currentColor', size = 24 } = Astro.props
 ---
+
 <svg
   xmlns="http://www.w3.org/2000/svg"
   width={size}
@@ -8,7 +9,7 @@ const { color = 'currentColor', size = 24 } = Astro.props;
   viewBox="0 0 24 24"
   fill="none"
   stroke={color}
-  stroke-width="1"
+  stroke-width="2"
   stroke-linecap="round"
   stroke-linejoin="round"
   class="icon icon-tabler icons-tabler-outline icon-tabler-external-link"
