--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,56 +1,27 @@
 ---
-import CodeIcon from '../assets/icons/CodeIcon.astro';
-import NavigationIcon from '../assets/icons/NavigationIcon.astro';
-import ShareIcon from '../assets/icons/ShareIcon.astro';
-import GitHub from '../assets/icons/GitHub.astro';
-import LinkedIn from '../assets/icons/LinkedIn.astro';
+import GitHub from '../assets/icons/GitHub.astro'
+import LinkedIn from '../assets/icons/LinkedIn.astro'
+import ButtonLink from './ButtonLink.astro'
 ---
 
-<footer class="bg-white dark:bg-[#111] text-gray-800 dark:text-white py-12">
-  <div
-    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 grid grid-cols-1 md:grid-cols-2 gap-x-16 gap-y-10"
-  >
-    <div>
-      <h3 class="flex items-center text-2xl font-bold mb-2 gap-2">
-        <CodeIcon />Luis Gómez
-      </h3>
-      <p class="text-sm text-gray-800 dark:text-gray-300 max-w-md text-pretty">
-        Ingeniero de sistemas y desarrollador web con más de cuatro años de experiencia en el
-        diseño, desarrollo y mantenimiento de aplicaciones web.
-      </p>
-    </div>
-    <div>
-      <h4 class="flex items-center gap-2 text-lg font-semibold mb-3">
-        <NavigationIcon />Navegación
-      </h4><ul class="flex flex-col gap-2 text-sm text-gray-800 dark:text-gray-300">
-        <li>
-          <a href="#inicio" class="hover:text-green-600 dark:hover:text-green-400 transition"
-            >Inicio</a
-          >
-        </li><li>
-          <a href="#experiencia" class="hover:text-green-600 dark:hover:text-green-400 transition"
-            >Experiencia</a
-          >
-        </li><li>
-          <a href="#proyectos" class="hover:text-green-600 dark:hover:text-green-400 transition"
-            >Proyectos</a
-          >
-        </li><li>
-          <a href="#habilidades" class="hover:text-green-600 dark:hover:text-green-400 transition"
-            >Habilidades</a
-          >
-        </li>
-        <li>
-          <a href="#contacto" class="hover:text-green-600 dark:hover:text-green-400 transition"
-            >Contacto</a
-          >
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="mt-10 border-t border-gray-200 dark:border-gray-700 pt-6 text-center">
-    <p class="text-sm text-gray-600 dark:text-gray-400">
+<footer class="bg-white dark:bg-[#111] text-gray-800 dark:text-white py-8">
+  <div class="flex justify-between max-w-6xl mx-auto items-center px-4">
+    <p class="text-sm text-gray-300">
       © {new Date().getFullYear()} Luis Gómez Dev.
     </p>
+    <div class="flex items-center gap-3">
+      <ButtonLink
+        href="https://github.com/luisgomezadev"
+        class="text-white bg-transparent border-none"
+      >
+        <GitHub class="w-6 h-6" />
+      </ButtonLink>
+      <ButtonLink
+        href="https://www.linkedin.com/in/luisgomezdev/"
+        class="text-white bg-transparent border-none"
+      >
+        <LinkedIn class="w-6 h-6" />
+      </ButtonLink>
+    </div>
   </div>
 </footer>
