--- a/src/assets/icons/AngularIcon.astro
+++ b/src/assets/icons/AngularIcon.astro
@@ -1,5 +1,5 @@
 ---
-const { color = 'currentColor', size = 24 } = Astro.props;
+const { color = 'currentColor', size = 24 } = Astro.props
 ---
 
 <svg
