--- a/src/assets/icons/EmailIcon.astro
+++ b/src/assets/icons/EmailIcon.astro
@@ -1,5 +1,5 @@
 ---
-const { color = "currentColor", size = 24 } = Astro.props;
+const { color = 'currentColor', size = 24 } = Astro.props
 ---
 
 <svg
@@ -9,12 +9,11 @@ const { color = "currentColor", size = 24 } = Astro.props;
   viewBox="0 0 24 24"
   fill="none"
   stroke={color}
-  stroke-width="1"
+  stroke-width="2"
   stroke-linecap="round"
   stroke-linejoin="round"
   class="icon icon-tabler icons-tabler-outline icon-tabler-mail-forward"
   ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-    d="M12 18h-7a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5"
-  ></path><path d="M3 6l9 6l9 -6"></path><path d="M15 18h6"></path><path
-    d="M18 15l3 3l-3 3"></path></svg
+    d="M12 18h-7a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5"></path><path
+    d="M3 6l9 6l9 -6"></path><path d="M15 18h6"></path><path d="M18 15l3 3l-3 3"></path></svg
 >
