--- a/src/assets/icons/GitHub.astro
+++ b/src/assets/icons/GitHub.astro
@@ -1,5 +1,5 @@
 ---
-const { color = "currentColor", size = 24 } = Astro.props;
+const { color = 'currentColor', size = 24 } = Astro.props
 ---
 
 <svg
@@ -9,7 +9,7 @@ const { color = "currentColor", size = 24 } = Astro.props;
   viewBox="0 0 24 24"
   fill="none"
   stroke={color}
-  stroke-width="1"
+  stroke-width="2"
   stroke-linecap="round"
   stroke-linejoin="round"
   class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"
