--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,103 +1,101 @@
 ---
-import GitHub from '../assets/icons/GitHub.astro';
-import LinkedIn from '../assets/icons/LinkedIn.astro';
-import CvIcon from '../assets/icons/CvIcon.astro';
-import EmailIcon from '../assets/icons/EmailIcon.astro';
-import AngularIcon from '../assets/icons/AngularIcon.astro';
-import TypeScriptIcon from '../assets/icons/TypeScriptIcon.astro';
-import SpringIcon from '../assets/icons/SpringIcon.astro';
-import VueIcon from '../assets/icons/VueIcon.astro';
+import GitHub from '../assets/icons/GitHub.astro'
+import LinkedIn from '../assets/icons/LinkedIn.astro'
+import CvIcon from '../assets/icons/CvIcon.astro'
+import EmailIcon from '../assets/icons/EmailIcon.astro'
+import AngularIcon from '../assets/icons/AngularIcon.astro'
+import TypeScriptIcon from '../assets/icons/TypeScriptIcon.astro'
+import SpringIcon from '../assets/icons/SpringIcon.astro'
+import VueIcon from '../assets/icons/VueIcon.astro'
 
-import ButtonLink from './ButtonLink.astro';
+import ButtonLink from './ButtonLink.astro'
 
-const { id } = Astro.props;
+const { id } = Astro.props
 ---
 
-<section
-  id={id}
-  class="grid lg:grid-cols-2 gap-x-12 gap-y-10 items-center min-h-[calc(100vh-5rem)] scroll-mt-30"
->
-  <div class="flex flex-col gap-6" data-aos="fade-right">
-    <div>
-      <span class="text-2xl">Hola, soy</span>
-      <h1 class="text-5xl lg:text-6xl font-bold text-gray-800 dark:text-white">
-        Luis Gómez
-      </h1>
+<section id={id} class="h-auto md:min-h-screen scroll-mt-30 bg-gray-100">
+  <header
+    class="max-w-7xl mx-auto px-4 lg:px-6 py-12 grid md:grid-cols-2 gap-x-12 gap-y-10 items-center h-auto md:h-screen"
+  >
+    <div class="flex flex-col gap-6">
+      <div>
+        <span class="text-2xl">Hola, soy</span>
+        <h1 class="text-6xl lg:text-8xl font-bold text-gray-800 dark:text-red-800 tracking-tighter">
+          Luis Gómez
+        </h1>
+      </div>
+      <h2 class="text-2xl lg:text-3xl font-semibold flex items-center">
+        <span class="typing-text text-black">&lt;Desarrollador FullStack/&gt;</span>
+      </h2>
+      <p
+        class="text-lg text-pretty text-gray-800 opacity-80 dark:text-black leading-relaxed max-w-lg"
+      >
+        Ingeniero de sistemas con más de cuatro años de experiencia en el diseño, desarrollo y
+        mantenimiento de aplicaciones web modernas.
+      </p>
+      <div class="flex items-center space-x-4">
+        <span class="text-gray-800 dark:text-black font-medium">Sígueme por:</span>
+        <div class="flex space-x-3">
+          <ButtonLink href="https://github.com/luisgomezadev" class="text-white bg-black">
+            <GitHub class="w-6 h-6" />
+          </ButtonLink>
+          <ButtonLink href="https://www.linkedin.com/in/luisgomezdev/" class="text-white bg-black">
+            <LinkedIn class="w-6 h-6" />
+          </ButtonLink>
+        </div>
+      </div>
+      <div class="flex items-center gap-4 mt-4">
+        <ButtonLink href="mailto:luisgomez24g@gmail.com" class="text-white bg-black px-4">
+          <EmailIcon color="#FFF" size={20} />
+          Contactar
+        </ButtonLink>
+        <ButtonLink
+          class="bg-transparent border-2 border-black text-black px-4"
+          href="/files/CV_Luis_Gomez_2025.pdf"
+        >
+          <CvIcon color="#000" size={20} />
+          Descargar mi CV
+        </ButtonLink>
+      </div>
     </div>
-    <h2 class="text-2xl lg:text-3xl font-semibold text-gray-800 dark:text-white flex items-center">
-      <span class="typing-text text-green-500">&lt;Desarrollador FullStack/&gt;</span>
-    </h2>
-    <p class="text-lg text-gray-800 opacity-90 dark:text-green-100 leading-relaxed max-w-lg">
-      Ingeniero de sistemas con más de cuatro años de experiencia en el diseño, desarrollo y
-      mantenimiento de aplicaciones web modernas.
-    </p>
-    <div class="flex items-center space-x-4">
-      <span class="text-gray-800 dark:text-white font-medium">Sígueme en:</span>
-      <div class="flex space-x-3">
-        <ButtonLink href="https://github.com/luisgomezadev">
-          <GitHub class="w-6 h-6" />
-        </ButtonLink>
-        <ButtonLink href="https://www.linkedin.com/in/luisgomezdev/">
-          <LinkedIn class="w-6 h-6" />
-        </ButtonLink>
+    <div class="relative flex justify-center items-center">
+      <div class="relative bg-gray-100">
+        <img
+          src="/images/perfil.webp"
+          alt="Luis Gómez"
+          class="bg-gray-100 w-72 h-72 sm:w-96 sm:h-96 lg:w-[480px] lg:h-[480px] object-cover hover:-translate-y-2 transition-all duration-300"
+        />
       </div>
       <div
-        class="px-3 py-1 text-xs md:text-sm rounded-full border text-green-600 border-current bg-white/5 backdrop-blur-sm md:inline-block hidden"
+        class="absolute top-6 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
-        Disponible para trabajar
+        <span class="group-hover:text-red-700 transition-all duration-300"
+          ><AngularIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
+        >
       </div>
-    </div>
-    <div class="flex items-center gap-4 mt-4">
-      <ButtonLink href="mailto:luisgomez24g@gmail.com">
-        <EmailIcon color="#000" size={20} />
-        Contactar
-      </ButtonLink>
-      <ButtonLink
-        class="bg-transparent border-2 border-white text-white"
-        href="/files/CV_Luis_Gomez_2025.pdf"
+      <div
+        class="absolute top-12 right-8 md:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
-        <CvIcon color="#FFF" size={20} />
-        Descargar mi CV
-      </ButtonLink>
-    </div>
-  </div>
-  <div class="relative flex justify-center items-center" data-aos="fade-up">
-    <div class="relative">
-      <img
-        src="/images/foto_perfil.webp"
-        alt="Luis Gómez"
-        class="w-64 h-64 sm:w-80 sm:h-80 lg:w-96 lg:h-96 object-cover rounded-full shadow-2xl hover:-translate-y-2 transition-all duration-300"
-      />
-    </div>
-    <div
-      class="absolute top-0 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
-    >
-      <span class="group-hover:text-red-700 transition-all duration-300"
-        ><AngularIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
+        <span class="group-hover:text-blue-700 transition-all duration-300"
+          ><TypeScriptIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
+        >
+      </div>
+      <div
+        class="absolute bottom-0 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
-    </div>
-    <div
-      class="absolute top-0 right-8 md:right-0 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
-    >
-      <span class="group-hover:text-blue-700 transition-all duration-300"
-        ><TypeScriptIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
+        <span class="group-hover:text-green-600 transition-all duration-300"
+          ><SpringIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
+        >
+      </div>
+      <span
+        class="absolute bottom-8 sm:bottom-10 right-10 sm:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
+        <span class="group-hover:text-[#42b883] transition-all duration-300"
+          ><VueIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
+        >
+      </span>
     </div>
-    <div
-      class="absolute bottom-0 left-8 sm:left-10 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
-    >
-      <span class="group-hover:text-green-600 transition-all duration-300"
-        ><SpringIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
-      >
-    </div>
-    <span
-      class="absolute bottom-8 sm:bottom-10 right-10 sm:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
-    >
-      <span class="group-hover:text-[#42b883] transition-all duration-300"
-        ><VueIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
-      >
-    </span>
-  </div>
+  </header>
 </section>
 <style>
   .animate-float {
