--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,14 +1,14 @@
 ---
-import Section from './Section.astro';
-import CardItem from './CardItem.astro';
-import { SKILLS } from '../data/skills';
+import Section from './Section.astro'
+import CardItem from './CardItem.astro'
+import { SKILLS } from '../data/skills'
 
-const { id } = Astro.props;
+const { id } = Astro.props
 ---
 
 <Section title="Habilidades" id={id} subtitle="Tecnologías y herramientas que manejo">
-  <CardItem class="py-8 px-8 lg:px-12">
-    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
+  <div class="py-8 px-3 max-w-6xl mx-auto">
+    <div class="grid grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-8">
       {
         SKILLS.map((skill) => (
           <div class="flex flex-col items-center text-center">
@@ -23,5 +23,5 @@ const { id } = Astro.props;
         ))
       }
     </div>
-  </CardItem>
+  </div>
 </Section>
