--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import Navbar from '../components/Navbar.astro';
-import Footer from '../components/Footer.astro';
+import Navbar from '../components/Navbar.astro'
+import Footer from '../components/Footer.astro'
 
-const { title, description } = Astro.props;
+const { title, description } = Astro.props
 ---
 
 <!doctype html>
@@ -10,7 +10,7 @@ const { title, description } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/x-icon" href="/images/LG_logo.jpg" />
+    <link rel="icon" type="image/x-icon" href="/logo_personal_blanco.webp" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
     <title>{title}</title>
@@ -36,25 +36,10 @@ const { title, description } = Astro.props;
       content="Bienvenidos a mi portafolio. Soy Luis Gómez, ingeniero de sistemas y desarrollador web con más de cuatro años de experiencia en el diseño, desarrollo y mantenimiento de aplicaciones web."
     />
   </head>
-  <body class="text-gray-200 bg-black">
+  <body class="text-gray-800 bg-white">
     <Navbar />
-    <main class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-20 md:mt-14 mb-14 flex flex-col gap-20">
+    <main class="flex flex-col md:pt-0 pt-12">
       <slot />
-      <Fragment
-        set:html={`
-          <script type="module">
-            import AOS from 'https://cdn.skypack.dev/aos';
-
-            window.addEventListener('DOMContentLoaded', () => {
-              AOS.init({
-                once: true,
-                duration: 1000,
-                easing: 'ease-out',
-              });
-            });
-          </script>
-        `}
-      />
     </main>
     <Footer />
   </body>
@@ -67,12 +52,10 @@ const { title, description } = Astro.props;
   body {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
-      sans-serif;
+    font-family:
+      -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    background-image: url('/background.png');
-    background-repeat: repeat;
   }
 
   a {
