--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Hero from '../components/Hero.astro';
-import Projects from '../components/Projects.astro';
-import Skills from '../components/Skills.astro';
-import Experience from '../components/Experience.astro';
-import Contact from '../components/Contact.astro';
+import Layout from '../layouts/Layout.astro'
+import Hero from '../components/Hero.astro'
+import Projects from '../components/Projects.astro'
+import Skills from '../components/Skills.astro'
+import Experience from '../components/Experience.astro'
+import Contact from '../components/Contact.astro'
 
-import 'aos/dist/aos.css';
+import 'aos/dist/aos.css'
 ---
 
 <Layout
