--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,12 +11,14 @@ import ButtonLink from './ButtonLink.astro'
     </p>
     <div class="flex items-center gap-3">
       <ButtonLink
+       title="GitHub Luis Gomez" 
         href="https://github.com/luisgomezadev"
         class="text-white bg-transparent border-none"
       >
         <GitHub class="w-6 h-6" />
       </ButtonLink>
       <ButtonLink
+       title="LinkedIn Luis Gomez" 
         href="https://www.linkedin.com/in/luisgomezdev/"
         class="text-white bg-transparent border-none"
       >
