--- a/src/components/ButtonLink.astro
+++ b/src/components/ButtonLink.astro
@@ -1,11 +1,13 @@
 ---
-const { href, class: className = 'bg-black' } = Astro.props
+const { href, class: className = 'bg-black', title } = Astro.props
 ---
 
 <a
   class={`flex items-center border-2 border-black font-medium px-2 py-2 rounded-full gap-2 hover:scale-105 hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 cursor-pointer ${className}`}
   href={href}
   target="_blank"
+  title={title}
+  aria-label={title}
 >
   <slot />
 </a>
