--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,6 +1,5 @@
 ---
-import CardItem from './CardItem.astro'
-import Section from './Section.astro'
+import Section from './shared/Section.astro'
 
 const { id } = Astro.props
 ---
