--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -30,7 +30,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
           <div class="hidden md:block"><ExperienceIcon /></div>
           Experiencia
           <span
-            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-current transition-all duration-300 group-hover:w-full group-hover:left-0"
+            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-red-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
           ></span>
         </a>
       </li>
@@ -39,7 +39,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
           <div class="hidden md:block"><CodeIcon /></div>
           Proyectos
           <span
-            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-current transition-all duration-300 group-hover:w-full group-hover:left-0"
+            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-red-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
           ></span>
         </a>
       </li>
@@ -48,7 +48,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
           <div class="hidden md:block"><SkillIcon /></div>
           Habilidades
           <span
-            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-current transition-all duration-300 group-hover:w-full group-hover:left-0"
+            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-red-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
           ></span>
         </a>
       </li>
@@ -57,7 +57,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
           <div class="hidden md:block"><MailIcon /></div>
           Contacto
           <span
-            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-current transition-all duration-300 group-hover:w-full group-hover:left-0"
+            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-red-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
           ></span>
         </a>
       </li>
