--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,8 +1,7 @@
 ---
-import Section from './Section.astro'
-import CardItem from './CardItem.astro'
+import Section from './shared/Section.astro'
 import ProjectIcon from '../assets/icons/ProjectIcon.astro'
-import ButtonLink from './ButtonLink.astro'
+import ButtonLink from './shared/ButtonLink.astro'
 import GitHub from '../assets/icons/GitHub.astro'
 import WebIcon from '../assets/icons/WebIcon.astro'
 
