--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,6 +1,5 @@
 ---
-import Section from './Section.astro'
-import CardItem from './CardItem.astro'
+import Section from './shared/Section.astro'
 import { SKILLS } from '../data/skills'
 
 const { id } = Astro.props
