--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,7 +8,7 @@ import TypeScriptIcon from '../assets/icons/TypeScriptIcon.astro'
 import SpringIcon from '../assets/icons/SpringIcon.astro'
 import VueIcon from '../assets/icons/VueIcon.astro'
 
-import ButtonLink from './ButtonLink.astro'
+import ButtonLink from './shared/ButtonLink.astro'
 
 const { id } = Astro.props
 ---
@@ -19,7 +19,7 @@ const { id } = Astro.props
   >
     <div class="flex flex-col gap-6">
       <div>
-        <span class="text-2xl">Hola, soy</span>
+        <span class="text-xl opacity-80 uppercase font-semibold">Hola, soy</span>
         <h1 class="text-6xl lg:text-8xl font-bold text-gray-800 dark:text-red-800 tracking-tighter">
           Luis Gómez
         </h1>
