--- a/src/components/shared/Section.astro
+++ b/src/components/shared/Section.astro
@@ -4,8 +4,8 @@ const { title, subtitle, id, class: className = 'bg-white' } = Astro.props
 
 <section id={id} class={`scroll-mt-16 py-16 ${className}`}>
   <section class="text-center mb-8">
-    <h3 class="text-3xl font-semibold">{title}</h3>
-    {subtitle && <p class="opacity-70 text-base px-4">{subtitle}</p>}
+    <h2 class="text-3xl font-semibold">{title}</h2>
+    {subtitle && <h3 class="opacity-70 text-base px-4">{subtitle}</h3>}
   </section>
   <slot />
 </section>
